--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
   </li>
   <li>
    🛍️
-    <span>{{ serviesService.cart.length }}</span> <!--משתנה של הסרביס-->
+    <span>{{ serviesService.ItemCount }}</span> <!--משתנה של הסרביס-->
   </li>
 </ul>
 <router-outlet></router-outlet> 
